# camkes-vm

./: .gitignore  .licenseignore  .stylefilter  CMakeLists.txt  Findcamkes-arm-vm.cmake  Findcamkes-vm.cmake  Kbuild  Kconfig  Makefile  README.md  arm_vm_helpers.cmake  c162_README  camkes_vm_helpers.cmake  camkes_vm_settings.cmake  lwipopts.h  settings.cmake
.github/workflows/: test.yml
apps/c162_twovm/: Kbuild  Kconfig  Makefile  c162_vm.camkes  vm.camkes
apps/cma34cr_centos/: Kbuild  Kconfig  Makefile  README.md  centos-kernel-config  cma34cr_centos.camkes  global-templates  vm.camkes
apps/cma34cr_minimal/: Kbuild  Kconfig  Makefile  cma34cr.camkes  cross_vm.c  print_server.c  vm.camkes
apps/cma34cr_onevm/: Kbuild  Kconfig  Makefile  cma34cr.camkes  tardec.camkes
apps/cma34cr_picotcp/: Kbuild  Kconfig  Makefile  README.md  cma34cr_picotcp.camkes  vm.camkes
apps/cma34cr_singlevm/: Kbuild  Kconfig  Makefile  cma34cr.camkes  vm.camkes
apps/cma34cr_twovm/: Kbuild  Kconfig  Makefile  cma34cr.camkes  vm.camkes
apps/cma34cr_ubuntu/: Kbuild  Kconfig  Makefile  README.md  cma34cr_ubuntu.camkes  vm.camkes
apps/cma34cr_vchan/: Kbuild  Kconfig  Makefile  cma34cr.camkes  vm.camkes
apps/cxx/: Kbuild  Kconfig  Makefile  README  cxx.camkes
apps/optiplex9020_onevm/: Kbuild  Kconfig  Makefile  optiplex9020.camkes  vm.camkes
apps/optiplex9020_onevm_cross_vm/: Kbuild  Kconfig  Makefile  README.md  optiplex9020.camkes  vm.camkes
apps/optiplex9020_onevm_cross_vm_dataport/: Kbuild  Kconfig  README.md  optiplex9020.camkes
apps/simple/: Kconfig  Makefile
apps/simple/rustclient/: Cargo.toml
apps/simple/rustclient/src/: lib.rs
apps/vm/: HPET.camkes  IOAPIC.camkes  Kbuild  Kconfig  Makefile  PIC.camkes  PIT.camkes  Serial.camkes  boost  cma34cr_centos.camkes  global-templates  (+3 more)
components/Netstack/netstack/: Cargo.toml
components/Netstack/netstack/src/: lib.rs
components/PicoServer/: CMakeLists.txt  PicoServer.camkes
components/PicoServer/include/: picoserver_client.h  picoserver_socket.h
components/PicoServer/libPicoServer-client/: CMakeLists.txt  picoserver.h  picoserver_event.h  picoserver_peer.h
components/PicoServer/src/: eth_interface.c  picoserver.c  picoserver_client.c
configs/: DQ67EP_defconfig  c162_threevm_testing_defconfig  c162_twovm_defconfig  cma34cr_centos_defconfig  cma34cr_centos_release_defconfig  cma34cr_minimal_defconfig  cma34cr_onevm_defconfig  cma34cr_picotcp_defconfig  cma34cr_singlevm_defconfig  cma34cr_twovm_defconfig  cma34cr_ubuntu_defconfig  cma34cr_vchan_defconfig  minimal_defconfig  nohardware_multivm_defconfig  nohardware_onevm_iommu_defconfig  nohardware_onevm_one_to_one_defconfig  optiplex9020_defconfig  optiplex9020_onevm_cross_vm_dataport_defconfig  optiplex9020_onevm_cross_vm_defconfig  optiplex9020_onevm_defconfig  simple_cxx_defconfig  vmware_defconfig  x64_cma34cr_ubuntu_defconfig  x64_optiplex9020_defconfig  x64_optiplex9020_onevm_defconfig  x86_simple_defconfig  x86_vm_iommu_defconfig  x86_vm_one_to_one_defconfig
docs/: deprecated.md
interfaces/: BuffQueues.idl4  Ethdriver.camkes  Ethdriver.idl4  ExcludeGuestPAddr.idl4  ExtraRAM.idl4  FileServerInterface.idl4  GetChar.idl4  GuestMaps.idl4  InitConnection.idl4  InterruptGenerator.idl4  LevelInterrupt.idl4  PCIConfig.idl4  PicoControl.idl4  PicoRecv.idl4  PicoSend.idl4  PutChar.idl4  RTC.idl4  Sataserver.idl4  Timer.idl4  UDPRecv.idl4  UDPSend.idl4  VMIOPorts.idl4  VMIRQs.idl4  VMPCIDevices.idl4  VchanInitInterface.idl4  VchanInterface.idl4  VirtIOPort.idl4  VirtQueues.idl4  seL4VMDTBPassthrough.idl4  vm-connectors.camkes
libs/libcrossvm/: CMakeLists.txt
libs/libcrossvm/include/: camkes_consumes_event.h  camkes_emits_event.h  camkes_mutex.h  cross_vm_consumes_event.h  cross_vm_dataport.h  cross_vm_emits_event.h  dataport_caps.h
libs/libcrossvm/shared_include/cross_vm_shared/: cross_vm_shared_dataport.h  cross_vm_shared_guest_to_vmm_event.h  cross_vm_shared_vmm_to_guest_event.h
libs/libcrossvm/src/: cross_vm_consumes_event.c  cross_vm_dataport.c  cross_vm_emits_event.c
libs/libvirtio/: CMakeLists.txt
libs/libvirtio/include/virtio/: virtio.h  virtio_blk.h  virtio_console.h  virtio_net.h
libs/libvirtio/include/virtioarm/: virtio_console.h  virtio_net.h
libs/libvirtio/plat_include/exynos5/virtio/: virtio_plat.h
libs/libvirtio/plat_include/qemu-arm-virt/virtio/: virtio_plat.h
libs/libvirtio/plat_include/tx2/virtio/: virtio_plat.h
libs/libvirtio/plat_include/zynqmp/virtio/: virtio_plat.h
libs/libvirtio/src/: virtio_blk.c  virtio_console.c  virtio_net.c
libsel4cxx/: Kbuild  Kconfig  Makefile
linux/: .config  README.md  build-rootfs  bzimage  camkes_init  common.mk  common_app.mk  common_lib.mk  editfs  init_template  rootfs-bare.cpio  rootfs.cpio
templates/: global-endpoint.template.c  seL4AllocatorMempool.template.c  seL4AllocatorMempool.template.h  seL4AllocmanVirtualSize.template.c  seL4AllocmanVirtualSize.template.h  seL4BuffQueues-from.template.c  seL4CrossVMSharedData-from.template.c  seL4CrossVMSharedData-to.template.c  seL4Ethdriver-from.template.c  seL4Ethdriver-to.template.c  seL4ExcludeGuestPAddr.template.c  seL4ExtraRAM.template.c  seL4GlobalAsynch-from.template.c  seL4GlobalAsynch-to.template.c  seL4GlobalAsynchCallback-from.template.c  seL4GlobalAsynchCallback-to.template.c  seL4GuestMaps.template.c  seL4InitConnection.template.c  seL4MultiSharedData-from.template.c  seL4MultiSharedData-to.template.c  seL4PicoUDPRecv-from.template.c  seL4PicoUDPRecv-to.template.c  seL4PicoUDPSend-from.template.c  seL4PicoUDPSend-to.template.c  seL4ProdCon-to.template.c  seL4RPCCallDataport-from.template.c  seL4RPCCallDataport-to.template.c  seL4RPCDataport-from.template.c  seL4RPCDataport-to.template.c  seL4SMMUV2.template.c  seL4Sataserver-from.template.c  seL4Sataserver-to.template.c  seL4SerialServer-from.template.c  seL4SerialServer-to.template.c  seL4SharedDataWithCaps-from.template.c  seL4SharedDataWithCaps-to.template.c  seL4TimeServer-from.template.c  seL4TimeServer-to.template.c  seL4UDPRecv-from.template.c  seL4UDPRecv-to.template.c  (+16 more)
(+384 files in other folders)
