#
# Copyright 2016, NICTA
#
# This software may be distributed and modified according to the terms of
# the BSD 2-Clause license. Note that NO WARRANTY is provided.
# See "LICENSE_BSD2.txt" for details.
#
# @TAG(NICTA_BSD)
#

[package]
name = "rustclient"
version = "0.0.1"
authors = ["Kent McLeod <kent.mcleod@data61.csiro.au>"]
description = "Sample rust hello world on camkes"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
# for the sel4-specific liblibc definitions
libc = { optional = true, git = "https://github.com/aisamanra/liblibc.git" }

[replace]
"libc:0.2.40" = { git = 'https://github.com/aisamanra/liblibc.git' }
