[package]
name = "netstack"
version = "0.1.0"
authors = ["Michal Podhradsky <mpodhradsky@galois.com>"]

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies.smoltcp]
default-features = false
features = ["proto-ipv4", "proto-ipv6","phy-sel4",
  "socket-raw", "socket-icmp", "socket-udp", "socket-tcp"]
path = "../../../../../projects/smoltcp"

[replace]
"libc:0.2.40" = { git = 'https://github.com/GaloisInc/rs_liblibc.git' }
